premiere instruction sur le projet

--- a/Description
+++ b/Description
@@ -1,1 +1,4 @@
 1 voici le document pour la description du projet
+
+
+2 pour se projet il faut un fichier nommé "README.txt" qui présente le projet
