--- a/Description
+++ b/Description
@@ -1,4 +1,10 @@
 1 voici le document pour la description du projet
 
 
-2 pour se projet il faut un fichier nommé "README.txt" qui présente le projet
+2 pour se projet il faut 
+
+	un fichier nommé "README.txt" qui présente le projet
+
+	2 autres fichiers de mon choix
+
+	Au moins 4 commits disctincts montrant l'ajout puis la modification de certain fichier 
